# fspack

./: .bumpversion.toml  .copier-answers.yml  .coveragerc  .gitignore  Makefile  README.md  main.py  pyproject.toml  pyrefly.toml  ruff.toml  uv.toml
.github/workflows/: ci.yml  release.yml
.trae/docs/: iter-01-cli-loader.md  iter-02-nsis-installer.md  iter-03-linux-standalone.md  iter-04-code-quality.md  iter-05-e2e-examples.md  iter-06-docs-quality.md  iter-07-linux-installer.md  iter-08-linux-wheel-platform.md  iter-09-rich-progress-and-run-fix.md  iter-10-loader-cache-and-download-stats.md  iter-11-wheel-cache-no-index.md  iter-12-deps-cache-and-runtime-split.md  iter-13-examples-integration.md  iter-14-pack-test-and-fix.md  iter-15-tk-pack-limitation-doc.md  iter-16-examples-rename-sync.md  iter-17-dataclass-method-sink.md  iter-18-multi-entry.md  iter-19-简化.md  iter-20-abi3-deps-fix.md  iter-21-slim-source-exclude.md  iter-22-examples-slow-test.md  iter-23-slim-package.md  iter-24-sci-slim-specs.md  iter-25-ft2font-fix.md  iter-26-packaging-abstraction.md  iter-27-builder-split-wheels.md  iter-28-console-entry-net-refactor.md  iter-29-tkinter-builtin-packing.md  iter-30-slim-strip-exts.md  iter-31-favicon-auto-icon.md  iter-32-code-cleanup-and-refactor.md  (+2 more)
docs/: api.rst  conf.py  index.rst  integration.md
examples/pygame_gktetris/: __init__.py  conf.py  game.py  pyproject.toml
examples/pygame_gktetris/entities/: __init__.py  animation.py  particle.py  piece.py
templates/: pack-check.yml  release-pack.yml
tests/: test_analyzer.py  test_builder.py  test_builtin.py  test_cli.py  test_commands.py  test_config.py  test_console.py  test_e2e_slow.py  test_embed.py  test_entry.py  test_entry_wrapper.py  test_fspack.py  test_icon.py  test_installer.py  test_linux_installer.py  test_loader.py  test_mirror.py  test_net.py  test_platform.py  test_progress.py  test_project.py  test_runtime.py  test_slim.py  test_standalone.py  test_wheel_cache.py  test_wheels.py
(+139 files in other folders)
