[project]
authors = [{ name = "gooker_young", email = "gooker_young@qq.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies    = ["rich>=13.0", "tomli>=1.2; python_version < '3.11'"]
description     = "极速 Python 项目打包器。"
license         = "MIT"
name            = "fspack"
readme          = "README.md"
requires-python = ">=3.8"
version         = "0.1.1"

[project.optional-dependencies]
dev = [
    "fspack[lint,test]",
    "prek>=0.4.5",
    "tox-uv>=1.13.1",
    "tox>=4.25.0",
]
docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
]

[project.scripts]
fspack = "fspack.cli:main"
fsp = "fspack.cli:main"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/fspack"]

[tool.hatch.build.targets.wheel.force-include]
"src/fspack/py.typed" = "fspack/py.typed"

[dependency-groups]
dev = ["fspack[dev,docs]"]
