[project]
dependencies    = ["pygame>=2.5.0"]
description     = "A modern Tetris game with gradient colors, particle effects and dynamic line-clear animations"
name            = "gktetris"
readme          = "README.md"
requires-python = ">=3.8"
version         = "0.1.12"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]
